Editprofile textbox alignment fix

--- a/Admin/log_In/editprofile2.css
+++ b/Admin/log_In/editprofile2.css
@@ -273,7 +273,7 @@ input[type=password] {
   padding-left: 3px;
 }
 
-#preview-image {
+#mypreview {
 
   width: 100%;
   height: 240px;
